@@ -1,0 +1,8 @@
+<header>Allowed scripts</header>
+
+This field allows you to select the script installers that are available to
+virtual server owners on this plan. By default all are allowed, but you can
+remove some from the allowed list using the left/right arrow buttons. <p>
+
+<footer>
+
