@@ -1072,3 +1072,4 @@ Added a Module Config option for additional gzip command-line parameters, like -
 Re-factored code for deleting tables created by installed scripts, and better handle the case where a script's database is missing.
 Converted libraries to use Webmin's new WebminCore module, where available. This leads to a signficant improvement in memory use and speed.
 Added support for migrating Plesk 9 backups, which have a different format to Plesk 7 and 8.
+Allowed script installers can now be set at the plan level and on the Edit Owner Limits page. They can also be set on the command line with create-plan, modify-plan and modify-limits commands.
